--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 /* fonts*/
 @font-face {
     font-family: 'Open Sans';
@@ -34,7 +36,7 @@ button:focus {
     color: #FFF;
     background-image: -moz-linear-gradient( 90deg, rgb(73,89,112) 0%, rgb(48,47,59) 100%);
     background-image: -webkit-linear-gradient( 90deg, rgb(73,89,112) 0%, rgb(48,47,59) 100%);
-    background-image: -ms-linear-gradient( 90deg, rgb(73,89,112) 0%, rgb(48,47,59) 100);
+    background-image: -ms-linear-gradient( 90deg, rgb(73,89,112) 0%, rgb(48,47,59) 100%);
     border: none;
     padding: 0 15px 0 0;
     transition: all 0.5s;
@@ -404,8 +406,7 @@ div.mainContainer section .sectionTitleArea,
 section.coupsDeCoeur .sectionTitleArea {
     text-align: center;
 }
-div.mainContainer section .sectionTitle,
-section.coupsDeCoeur .sectionTitle {
+ .sectionTitle {
     display: inline-block;
     border-radius: 10px;
     margin-bottom: 40px;
@@ -416,6 +417,9 @@ section.coupsDeCoeur .sectionTitle {
     background-image: -moz-linear-gradient( 90deg, rgb(73,89,112) 0%, rgb(48,47,59) 100%);
     background-image: -webkit-linear-gradient( 90deg, rgb(73,89,112) 0%, rgb(48,47,59) 100%);
     background-image: -ms-linear-gradient( 90deg, rgb(73,89,112) 0%, rgb(48,47,59) 100%);
+}
+.agency-block-content p{
+    color: black;
 }
 section.coupsDeCoeur {
     margin-top: 60px;
@@ -582,7 +586,7 @@ section .agenceLinks a:hover {
 }
 .filtreArea .btn-group .multiselect {
     width: 100%;
-    border-radius: 8px;
+    border-radius: 5px;
     text-align: left;
     font-size: 13px;
 }
@@ -794,6 +798,7 @@ section .agenceLinks a:hover {
 .listingSection .listingItem .listingItemInformartion .body .bienShortDescription p {
     font-size: 13px;
     margin: 0;
+    color: black;
 }
 .listingSection .listingItem .listingItemInformartion .body .bienButtons {
     margin-top: 10px;
@@ -1111,7 +1116,7 @@ section .agenceLinks a:hover {
     background: url("../img/dpe-inprogress.png") no-repeat center rgba(245,245,245, 0.5);
 }
 .inprogress {
-    background: url("../img/ges-inprogress.png") enter rgba(245,245,245, 0.5);
+    background: url("../img/ges-inprogress.png")no-repeat center rgba(245,245,245, 0.5);
 }
 
 
@@ -1442,16 +1447,16 @@ section .agenceLinks a:hover {
 @media (min-width: 768px) {
     .listingSection .listingItem .listingItemInformartion .body .bienShortDescription p {
         height: 90px;
-        overflow-y: scroll;
-    }
+/*        overflow-y: scroll;
+*/    }
     .listingSection .listingItem .listingItemInformartion .body .bienDetails {
         margin: 0;
         border-radius: 0 0 20px 20px;
     }
     .listingSection .listingItem .listingItemInformartion .body .bienDetails ul {
         height: 130px;
-        overflow-y: scroll;
-    }
+/*        overflow-y: scroll;
+*/    }
     .listingSection .listingItem .listingItemInformartion .body .contactAgencySection {
         flex-wrap: nowrap;
     }
@@ -1464,6 +1469,7 @@ section .agenceLinks a:hover {
     }
     .listingSection .listingItem .listingItemInformartion .body .contactAgencySection .contactAgencySectionTitleSection p {
         text-align: left;
+        color: black;
     }
     .listingSection .listingItem .listingItemInformartion .body .contactAgencySection .contactAgencyButton button {
         float: right;
@@ -1506,12 +1512,13 @@ section .agenceLinks a:hover {
 @media (min-width: 1200px) {
     .listingSection .listingItem .listingItemInformartion .body .bienShortDescription p {
         height: 75px;
-        overflow-y: scroll;
+/*        overflow-y: scroll;
+*/        color: black;
     }
     .listingSection .listingItem .listingItemInformartion .body .bienDetails ul {
         height: 90px;
-        overflow-y: scroll;
-    }
+/*        overflow-y: scroll;
+*/    }
 }
 /* /listing */
 
@@ -1654,6 +1661,7 @@ section .agenceLinks a:hover {
 }
 .ficheSection .ficheItem .ficheItemInformartion .body .bienShortDescription p {
     margin: 0;
+    color: black;
 }
 .ficheSection .ficheItem .ficheItemInformartion .body .bienButtons {
     margin-top: 20px;
@@ -1708,6 +1716,7 @@ section .agenceLinks a:hover {
 }
 .ficheSection .contactAgency .agencyHeaderSection p {
     text-align: center;
+    color: black;
 }
 .ficheSection .contactAgency .formButton {
     margin-top: 0;
@@ -1888,127 +1897,15 @@ form textarea {
         margin-bottom: 20px;
     }
 }
+@media (max-width: 450px) {
+    .sectionTitle{
+        font-size: 21px!important;
+    }
+}
+
 /* /forms */
 
-/* footer */
-footer {
-    background: #000;
-}
-footer .siteMap {
-    background: #1d1d1d;
-}
-footer .siteMap ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-align: center;
-}
-footer .siteMap ul li,
-footer .siteMap ul a {
-    display: inline-block;
-}
-footer .siteMap ul a {
-    color: #FFF;
-    padding: 10px 5px;
-    text-transform: uppercase;
-    font-size: 9px;
-}
-footer .siteMap ul a:hover {
-    text-decoration: underline;
-}
-footer .footerBase {
-    color: #FFF;
-}
-footer .footerBase .row {
-    margin: 40px 0;
-}
-footer .footerBase .companyTitleLink {
-    color: #FFF;
-}
-footer .footerBase .companyTitleLink:hover {
-    text-decoration: underline;
-}
-footer .footerBase .companyTitle {
-    margin: 0;
-}
-footer .footerBase .companySubTitle {
-    color: #FFF;
-    font-size: 13px;
-}
-footer .footerBase .locationTags {
-    margin: 10px 0;
-    padding: 15px 0;
-    border-top: 1px solid #46556a;
-    border-bottom: 1px solid #46556a;
-    list-style: none;
-}
-footer .footerBase .locationTags ul li {
-    display: inline-block;
-}
-footer .footerBase .locationTags ul li a {
-    display: inline-block;
-    color: #FFF;
-    font-size: 11px;
-    margin-right: 30px;
-}
-footer .footerBase .locationTags ul li a:hover {
-    text-decoration: underline;
-}
-footer .footerBase p {
-    margin: 0;
-    color: #a0a0a0;
-    font-size: 10px;
-}
-footer .footerBase .footerCopyright a {
-    color: #FFF;
-}
-footer .footerBase .footerCopyright a:hover {
-    text-decoration: underline;
-}
-footer .footerBase .footerCopyrightDmaisons {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-footer .footerBase .footerCopyrightDmaisons img {
-    width: 100px;
-    margin-right: 15px;
-}
-footer .footerBase .footerCopyrightDmaisons p {
-    font-size: 8px
-}
-@media (max-width: 768px) {
-    footer .footerBase .footerCopyrightDmaisons {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 20px;
-    }
-    footer .footerBase .contactAgenceButtonArea {
-        display: flex;
-        justify-content: center;
-        margin: 20px 0 10px;
-    }
-}
-@media (min-width: 768px) {
-    footer .siteMap ul a {
-        padding: 20px 5px;
-    }
-    footer .siteMap ul li+li:before {
-      content: "|";
-      color: #616161;
-    }
-    footer .footerBase .contactAgenceButton {
-        float: right;
-    }
-}
-@media (min-width: 992px) {
-    footer .siteMap ul a {
-        padding: 20px 10px;
-        font-size: 11px;
-    }
-}
-/* /footer */
+
 /********************** Form Error Model1  Starts  ****************************/
 /*----------------------------------------------------------------------------*/
 /*-------------------- Form Error Block Content Starts ----------------*/
@@ -2150,3 +2047,278 @@ the drop down is opened above and the form tooltip  is under it */
 /*-------------------- Form Error Block Media Queries End -------*/
 /********************** Form Error Model1 Ends  ****************************/
 /*-------------------------------------------------------------------------*/
+
+/*-------------------- Footer Model2 Content Starts -------------------*/
+/*--- Footer General Styles Start ---*/
+.backlight
+{
+    background-color: rgba(45, 52, 60, 0.051);
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+}
+
+body>footer.footer-m2 {
+    padding: 0;
+}
+.footer-m2 p {
+    margin: 0;
+    padding: 0;
+}
+/*--- Footer General Styles End ---*/
+
+/*--- Footer Top Links Start ---*/
+#footer
+{ background-color: #000;
+    width: 100%;
+    height: auto;
+    display: inline-block;
+    padding-left: 0;
+    padding-right: 0;
+    min-width: 300px;
+    vertical-align: top;
+}
+.footer-m2 .footer-top-links ul {
+    display: inline-block;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 9px;
+    padding-top: 9px;
+}
+.footer-m2 .footer-top-links li {
+    display: block;
+    margin: 0;
+    padding: 0;
+}
+.footer-m2 .footer-top-links li span {
+    display: none;
+    color: #e5e5e5;
+}
+.footer-m2 .footer-top-links li a {
+    font-size: 11px;
+    text-transform: uppercase;
+    color: #fff;
+}
+/*--- Footer Top Links End ---*/
+
+/*--- Footer Contacts-Partners Block Starts ---*/
+.footer-m2 .footer-contacts-partners {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: relative;
+}
+.footer-m2 .footer-contacts {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 1px;
+    padding-right: 0;
+}
+.footer-m2 .footer-partners {
+    line-height: 46px;
+    padding-left: 0;
+    padding-right: 0;
+}
+.footer-m2 .footer-partners div:nth-child(2) {
+    padding-left: 5px;
+}
+/*--- Footer Contacts-Partners Block Ends ---*/
+
+/*--- Footer Bottom Links Start ---*/
+.footer-m2 .footer-btm-links {
+    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-left: 1px;
+    padding-right: 1px;
+}
+.footer-m2 .footer-btm-links li {
+    padding: 0 15px 0 0;
+    float: left;
+    vertical-align: top;
+    line-height: 12px;
+    padding-top: 2px;
+}
+.footer-m2 .footer-btm-links a {
+    font-size: 11px;
+    text-decoration: none;
+}
+.footer-m2 .footer-btm-links a:hover,
+.footer-m2 .footer-btm-links a:focus {
+    text-decoration: underline;
+}
+/*--- Footer Bottom Links End ---*/
+
+/*--- Footer Copyright Block Starts ---*/
+.footer-m2 .footer-copyright-block {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.footer-m2 .footer-copyright-info {
+    padding-left: 1px;
+    padding-right: 0;
+}
+
+.footer-m2 .footer-copyright-logo {
+
+    padding-left: 2px;
+    padding-right: 0;
+
+}
+.footer-m2 .footer-copyright-block .footer-copyright-logo p {
+    font-size: 9px;
+    line-height: 10px;
+}
+.footer-m2 .footer-copyright-block .footer-copyright-logo div:nth-child(1) {
+    padding-right: 3px;
+    display: inline-flex;
+}
+.footer-m2 .footer-copyright-block .footer-copyright-logo div:nth-child(2) {
+    padding-left: 3px;
+    text-align: left;
+}
+/*--- Footer Copyright Block Ends ---*/
+
+/*-------------------- Footer Model2 Content Ends --------------------*/
+
+/*-------------------- Footer Model2 Colors Start --------------------*/
+/*--- Footer General Colors Start ---*/
+body>footer.footer-m2 {
+    padding: 0;
+
+}
+.footer-m2 .footer-top-links-bg {
+    background-color: transparent;
+    margin:0;
+}
+.footer-m2 .footer-contacts-partners-bg,
+.footer-m2 .footer-btm-links-bg,
+.footer-m2 .footer-copyright-block-bg {
+    margin-bottom: 17px;
+}
+.footer-copyright-block-bg>.row-inner{
+    padding:0;
+}
+
+.footer-m2 a,p {
+    color: #fff;
+}
+/*--- Footer General Colors End ---*/
+
+/* Footer Top Links Colors */
+.footer-m2 .footer-top-links-clr,
+.footer-m2 .footer-top-links-clr  a {
+    width: 100%;
+    color: #FFF;
+    background-color: #1d1d1d;
+    text-align: center;
+}
+
+/*--- Footer Bottom Links Colors Start ---*/
+.footer-m2 .footer-btm-links a {
+    color: #646464;
+    text-decoration: none;
+}
+.footer-m2 .footer-btm-links a:hover,
+.footer-m2 .footer-btm-links a:focus {
+    color: #646464;
+}
+/*--- Footer Bottom Links Colors End ---*/
+
+/*-------------------- Footer Model2 Colors End ----------------------*/
+
+/*-------------------- Footer Model2 Media Queries Start -------------*/
+@media (min-width: 768px) {
+    /*--- Footer Top Links Block Starts ---*/
+    .footer-m2 .footer-top-links li {
+        display: inline-block;
+    }
+    .footer-m2 .footer-top-links li span {
+        display: inline;
+    }
+    /*--- Footer Top Links Block Ends ---*/
+
+    /*--- Footer Contacts-Partners Block Starts ---*/
+    .footer-m2 .footer-contacts {
+        padding-right: 9px;
+    }
+    .footer-m2 .footer-partners {
+        padding-left: 9px;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+    }
+
+
+    /*--- Footer Contacts-Partners Block Ends ---*/
+
+    /*--- Footer Copyright Block Starts ---*/
+    .footer-m2 .footer-copyright-info {
+        padding-right: 9px;
+    }
+    .footer-m2 .footer-copyright-logo {
+        padding-left: 9px;
+        padding-right: 18px;
+
+    }
+    /*--- Footer Copyright Block Ends ---*/
+}
+.phone{
+    font-weight: 300;
+    font-size: 15px;
+    font-family: "Roboto Light";
+    color: black;
+}
+
+.buttonCall {
+    background-image: -moz-linear-gradient( 90deg, rgb(89,130,2) 0%, rgb(104,148,10) 100%);
+    background-image: -webkit-linear-gradient( 90deg, rgb(89,130,2) 0%, rgb(104,148,10) 100%);
+    background-image: -ms-linear-gradient( 90deg, rgb(89,130,2) 0%, rgb(104,148,10) 100%);
+    box-shadow: inset 0 0 1px 0 rgba(255, 255, 255, 0.75);
+    color: #FFF;
+    width: 164px;
+    height: 33px;
+    font-size: 14px;
+    font-family: 'Roboto';
+    line-height: 1.714;
+    border: none;
+    margin-top: 14px;
+    border-radius: 20px;
+}
+
+.buttonCall:hover{
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
+}
+.buttonCall:hover>.fa-phone
+{
+    transform: rotate(320deg);
+}
+.circle
+{
+    margin-right: 8px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    padding: 2px 4px;
+    width: 22px;
+    height: 22px;
+    vertical-align: top;
+
+}
+.adress
+{
+    margin-bottom: 14px;
+    margin-top: 14px;
+}
+
+.Villeneuve{
+    font-size: 11px;
+    line-height: 17px;
+    font-weight: 300;
+}
+
+/*-------------------- Footer Model2 Media Queries End --------------*/
